[gd_scene load_steps=17 format=2]

[ext_resource path="res://script/Porte.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/terrain/decoration/porte/Idle.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/terrain/decoration/porte/Closiong (46x56).png" type="Texture" id=3]
[ext_resource path="res://assets/textures/terrain/decoration/porte/Opening (46x56).png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 46, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 92, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 184, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 46, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 92, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 138, 0, 46, 56 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 184, 0, 46, 56 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "closing",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "iddleClosed",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "iddleOpened",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "opening",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0
height = 10.0

[node name="Porte" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "iddleClosed"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Porte_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Porte_body_exited"]
[connection signal="ready" from="." to="." method="_on_Porte_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
